--- a/japan.html
+++ b/japan.html
@@ -176,7 +176,7 @@ background-color: black;
                 <a href="index.html">HOME</a>
                 <a href="japan.html">JAPAN</a>
                 <a href="italy.html">ITALY</a>
-                <a href="thailand.html">thailand</a>
+                <a href="thailand.html">THAILAND</a>
                 <a href="mongolia.html">MONGOLIA</a>
                 <a href="contactus.html">CONTACT US</a>
    
