--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@ background-color: black;
               <a href="#">HOME</a>
               <a href="#">ABOUT US</a>
               <a href="#">JAPAN</a>
-              <a href="#">ARGENTINA</a>
+              <a href="#">THAILAND</a>
               <a href="#">ITALY</a>
               <a href="#">MONGOLIA</a>
               <a href="#">CONTACT US</a>
