--- a/index.html
+++ b/index.html
@@ -166,12 +166,13 @@ background-color: black;
    <div class="navigationbar" >
          <h2>Alinas Footstep</h2>
          <nav>
-              <a href="index.html">HOME</a>
-              <a href="japan.html">JAPAN</a>
-              <a href="italy.html">ITALY</a>
-              <a href="mongolia.html">MONGOLIA</a>
-              <a href="contactus.html">CONTACT US</a>
- 
+      <a href="index.html">HOME</a>
+            <a href="japan.html">JAPAN</a>
+            <a href="about.html">ABOUT</a>
+            <a href="italy.html">ITALY</a>
+            <a href="thailand.html">THAILAND</a>
+            <a href="mongolia.html">MONGOLIA</a>
+            <a href="contactus.html">CONTACT US</a>
          </nav>
  
    </div>
