--- a/index.html
+++ b/index.html
@@ -148,6 +148,64 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 .notice {
 	width: 345px;
 }
+
+.logo
+{position:absolute;
+  left: 600px;
+  top: 35px;}
+  .footer {
+  position: relative;
+  width: 100%;
+  background: black;
+  min-height: 00px;
+  padding: 20px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.social-icon,
+.menu {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
+}
+
+.social-icon__item,
+.menu__item {
+  list-style: none;
+}
+
+.social-icon__link {
+  font-size: 2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+}
+.social-icon__link:hover {
+  transform: translateY(-10px);
+}
+
+.menu__link {
+  font-size: 1.2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+  text-decoration: none;
+  opacity: 0.75;
+  font-weight: 300;
+}
+
+.menu__link:hover {
+  opacity: 1;
+}
+
 .footer p {
   color: #fff;
   margin: 15px 0 10px 0;
@@ -211,10 +269,6 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 }
 
-.logo
-{position:absolute;
-  left: 600px;
-  top: 35px;}
 
 </style>
 
@@ -309,7 +363,7 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 </body>
  <br>
  <br>
-<footer>
+ <footer>
     <footer class="footer">
         <div class="waves">
           <div class="wave" id="wave1"></div>
@@ -327,7 +381,7 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
           <li class="social-icon__item"><a class="social-icon__link" href="#">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a></li>
-		 <li class="social-icon__item"><a class="social-icon__link" href="#">
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
               <ion-icon name="logo-instagram"></ion-icon>
             </a></li>
         </ul>
@@ -343,8 +397,8 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       </footer>
       <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
       <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
- 
+
+
 </footer>
- 
  
 </html>
