--- a/thailand.html
+++ b/thailand.html
@@ -293,7 +293,7 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  
    </div>
    <div class="picture1" >
-    <img src="https://th.bing.com/th/id/OIP.sF4O2By0hnD42DEsolDnPQHaLG?rs=1&pid=ImgDetMain"width="100%"height="380px">
+    <img src="https://wallpapercave.com/wp/wp1916874.jpg"width="100%"height="380px">
 </div>
     <div class="text">
 
