--- a/thailand.html
+++ b/thailand.html
@@ -293,7 +293,7 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  
    </div>
    <div class="picture1" >
-    <img src="https://wallpapercave.com/wp/wp1916874.jpg"width="100%"height="380px">
+    <img src="https://img.locationscout.net/images/2020-05/bangkok-wat-arun-thailand_l.jpeg"width="100%"height="380px">
 </div>
     <div class="text">
 
